--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
         <a href="#home">Home</a>
         <a href="#about">Tentang Kami</a>
         <a href="#menu">Menu</a>
+        <a href="products">Produk</a>
         <a href="#contact">Contact</a>
       </div>
 
