--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SEKO Coffe</title>
 
+    <link rel="icon" type="image/x-icon" href="img/seko-icon.png" />
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -45,25 +47,25 @@
       <!-- Shopping Cart Start -->
       <div class="shopping-cart">
         <div class="cart-item">
-          <img src="img/product-1.jpg" alt="Product 1" />
+          <img src="img/product/seko-bottle.webp" alt="Product 1" />
           <div class="item-detail">
-            <h3>Product 1</h3>
+            <h3>Seko Coffee 1L Bottle</h3>
             <div class="item-price">IDR 30K</div>
           </div>
           <i data-feather="trash-2" class="remove-item"></i>
         </div>
         <div class="cart-item">
-          <img src="img/product-1.jpg" alt="Product 1" />
+          <img src="img/product/pink-bottle.webp" alt="Product 2" />
           <div class="item-detail">
-            <h3>Product 1</h3>
+            <h3>Pink Panther 1L Bottle</h3>
             <div class="item-price">IDR 30K</div>
           </div>
           <i data-feather="trash-2" class="remove-item"></i>
         </div>
         <div class="cart-item">
-          <img src="img/product-1.jpg" alt="Product 1" />
+          <img src="img/product/seko-bottle.webp" alt="Product 3" />
           <div class="item-detail">
-            <h3>Product 1</h3>
+            <h3>Seko Coffee 1L Bottle</h3>
             <div class="item-price">IDR 30K</div>
           </div>
           <i data-feather="trash-2" class="remove-item"></i>
@@ -77,8 +79,8 @@
     <section class="hero" id="home">
       <main class="content">
         <h1>Mari Nikmati Secangkir <span>Kopi</span></h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, totam.</p>
-        <a href="#" class="cta">Beli Sekarang</a>
+        <p>Yuk, nikmati aroma dan rasa kopi kami! Kunjungi kami hari ini dan rasakan sendiri kenikmatannya.</p>
+        <a href="https://linktr.ee/orderseko" target="_blank" class="cta">Beli Sekarang</a>
       </main>
     </section>
     <!-- Hero Section Ends -->
@@ -89,12 +91,12 @@
 
       <div class="row">
         <div class="about-img">
-          <img src="img/about.jpg" alt="Tentang Kami" />
+          <img src="img/about.png" alt="Tentang Kami" />
         </div>
         <div class="content">
           <h3>Mengapa memilih kopi kami</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla numquam minima totam suscipit, aliquam iste?</p>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae optio ullam cupiditate, autem commodi natus quas magni dignissimos tempore excepturi?</p>
+          <p>SEKO Coffee - Tempat di mana rasa dan pengalaman bertemu. Kami menjadi pilihan utama Anda karena kopi berkualitas tinggi, suasana yang nyaman, dan pelayanan yang ramah.</p>
+          <p>Nikmati setiap tegukan dengan biji kopi pilihan kami, ditemani dengan senyuman dari barista handal kami. Temukan kenikmatan kopi yang sesungguhnya hanya di Coffee</p>
         </div>
       </div>
     </section>
@@ -103,38 +105,23 @@
     <!-- Menu Section Start -->
     <section id="menu" class="menu">
       <h2><span>Menu</span> Kami</h2>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et maiores ullam perferendis. Aliquam, sapiente ratione?</p>
+      <p>Dari biji kopi pilihan hingga penganan manis yang memanjakan, kami mengundang Anda untuk merasakan harmoni sempurna dari cita rasa yang kami sajikan.</p>
 
       <div class="row">
         <div class="menu-card">
-          <img src="img/1.jpg" alt="Espresso" class="menu-card-img" />
-          <h3 class="menu-card-title">- Espresso -</h3>
-          <p class="menu-card-price">IDR 15K</p>
+          <img src="img/menu/mazeko.webp" alt="mazeko" class="menu-card-img" />
+          <h3 class="menu-card-title">- Mazeko Coffee -</h3>
+          <p class="menu-card-price">IDR 20K</p>
         </div>
         <div class="menu-card">
-          <img src="img/1.jpg" alt="Espresso" class="menu-card-img" />
-          <h3 class="menu-card-title">- Espresso -</h3>
-          <p class="menu-card-price">IDR 15K</p>
+          <img src="img/menu/pink-panther.webp" alt="pink-panther" class="menu-card-img" />
+          <h3 class="menu-card-title">- Pink Panther -</h3>
+          <p class="menu-card-price">IDR 22K</p>
         </div>
         <div class="menu-card">
-          <img src="img/1.jpg" alt="Espresso" class="menu-card-img" />
-          <h3 class="menu-card-title">- Espresso -</h3>
-          <p class="menu-card-price">IDR 15K</p>
-        </div>
-        <div class="menu-card">
-          <img src="img/1.jpg" alt="Espresso" class="menu-card-img" />
-          <h3 class="menu-card-title">- Espresso -</h3>
-          <p class="menu-card-price">IDR 15K</p>
-        </div>
-        <div class="menu-card">
-          <img src="img/1.jpg" alt="Espresso" class="menu-card-img" />
-          <h3 class="menu-card-title">- Espresso -</h3>
-          <p class="menu-card-price">IDR 15K</p>
-        </div>
-        <div class="menu-card">
-          <img src="img/1.jpg" alt="Espresso" class="menu-card-img" />
-          <h3 class="menu-card-title">- Espresso -</h3>
-          <p class="menu-card-price">IDR 15K</p>
+          <img src="img/menu/twomann.webp" alt="twomann-hops" class="menu-card-img" />
+          <h3 class="menu-card-title">- Twomann Hops -</h3>
+          <p class="menu-card-price">IDR 24K</p>
         </div>
       </div>
     </section>
@@ -143,7 +130,7 @@
     <!-- Products Section Start -->
     <section class="products" id="products">
       <h2><span>Produk</span> Unggulan Kami</h2>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia fuga ipsam eius nostrum reprehenderit tempora!</p>
+      <p>Setiap kopi memiiiki petualangan yang unik. Biji kopi dari petani terbaik ke tangan Anda, nikmati kualitas terbaik dalam setiap tegukan.</p>
 
       <div class="row">
         <div class="product-card">
@@ -152,10 +139,10 @@
             <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
           </div>
           <div class="product-image">
-            <img src="img/product-1.jpg" alt="Product 1" />
+            <img src="img/product/seko-bottle.webp" alt="Kopi Seko" />
           </div>
           <div class="product-content">
-            <h3>Coffee Beans 1</h3>
+            <h3>Kopi Seko 1L Bottle</h3>
             <div class="product-stars">
               <i data-feather="star" class="star-full"></i>
               <i data-feather="star" class="star-full"></i>
@@ -163,7 +150,7 @@
               <i data-feather="star" class="star-full"></i>
               <i data-feather="star"></i>
             </div>
-            <div class="product-price">IDR 30K <span>IDR 55K</span></div>
+            <div class="product-price">IDR 95K <span>IDR 120K</span></div>
           </div>
         </div>
         <div class="product-card">
@@ -172,10 +159,10 @@
             <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
           </div>
           <div class="product-image">
-            <img src="img/product-1.jpg" alt="Product 1" />
+            <img src="img/product/pink-bottle.webp" alt="Pink Panther Bottle" />
           </div>
           <div class="product-content">
-            <h3>Coffee Beans 1</h3>
+            <h3>Pink Panther 1L Bottle</h3>
             <div class="product-stars">
               <i data-feather="star"></i>
               <i data-feather="star"></i>
@@ -183,27 +170,7 @@
               <i data-feather="star"></i>
               <i data-feather="star"></i>
             </div>
-            <div class="product-price">IDR 30K <span>IDR 55K</span></div>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-icons">
-            <a href="#"><i data-feather="shopping-cart"></i></a>
-            <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
-          </div>
-          <div class="product-image">
-            <img src="img/product-1.jpg" alt="Product 1" />
-          </div>
-          <div class="product-content">
-            <h3>Coffee Beans 1</h3>
-            <div class="product-stars">
-              <i data-feather="star"></i>
-              <i data-feather="star"></i>
-              <i data-feather="star"></i>
-              <i data-feather="star"></i>
-              <i data-feather="star"></i>
-            </div>
-            <div class="product-price">IDR 30K <span>IDR 55K</span></div>
+            <div class="product-price">IDR 95K <span>IDR 120K</span></div>
           </div>
         </div>
       </div>
@@ -213,7 +180,7 @@
     <!-- Contact Section Start -->
     <section id="contact" class="contact">
       <h2><span>Kontak</span> Kami</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, corporis.</p>
+      <p>Isi form kontak dibawah untuk mengirim pertanyaan dan pesan. Atau kunjungi kami langsung di lokasi bawah ini.</p>
 
       <div class="row">
         <iframe
@@ -246,9 +213,8 @@
     <!-- Footer Start -->
     <footer>
       <div class="socials">
-        <a href="#"><i data-feather="instagram"></i></a>
-        <a href="#"><i data-feather="twitter"></i></a>
-        <a href="#"><i data-feather="facebook"></i></a>
+        <a href="https://www.instagram.com/seko.bdg/"><i data-feather="instagram"></i></a>
+        <a href="https://www.facebook.com/seko.id/"><i data-feather="facebook"></i></a>
       </div>
 
       <div class="links">
@@ -260,7 +226,7 @@
       </div>
 
       <div class="credit">
-        <p>Created by <a href="#">Hendy Oktavian</a>. | &copy; 2023.</p>
+        <p>Created by <a href="https://www.instagram.com/moka.cinno/">Hendy Oktavian</a>. | &copy; 2023.</p>
       </div>
     </footer>
     <!-- Footer Ends -->
@@ -270,10 +236,10 @@
       <div class="modal-container">
         <a href="#" class="close-icon"><i data-feather="x"></i></a>
         <div class="modal-content">
-          <img src="img/product-1.jpg" alt="Product-1" />
+          <img src="img/product/seko-bottle.webp" alt="Seko Bottle" />
           <div class="product-content">
-            <h3>Product 1</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab perspiciatis deserunt, molestiae, necessitatibus optio illo iusto enim assumenda vitae quod, iure minima! Pariatur, magni rerum?</p>
+            <h3>Kopi Seko 1L Bottle</h3>
+            <p>Kombinasi yang Sempurna antara Kopi dan Susu yang Creamy</p>
             <div class="product-stars">
               <i data-feather="star" class="star-full"></i>
               <i data-feather="star" class="star-full"></i>
