ubah logo, ubah harga lama, tambah form pesan

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <!-- Navbar Start -->
     <nav class="navbar">
-      <a href="#" class="navbar-logo">SEKO <span>Cofee</span></a>
+      <a href="#" class="navbar-logo">S<span>E</span>KO Coffee</span></a>
 
       <div class="navbar-nav">
         <a href="#home">Home</a>
@@ -50,7 +50,7 @@
           <img src="img/product/seko-bottle.webp" alt="Product 1" />
           <div class="item-detail">
             <h3>Seko Coffee 1L Bottle</h3>
-            <div class="item-price">IDR 30K</div>
+            <div class="item-price">IDR 95K</div>
           </div>
           <i data-feather="trash-2" class="remove-item"></i>
         </div>
@@ -58,7 +58,7 @@
           <img src="img/product/pink-bottle.webp" alt="Product 2" />
           <div class="item-detail">
             <h3>Pink Panther 1L Bottle</h3>
-            <div class="item-price">IDR 30K</div>
+            <div class="item-price">IDR 95K</div>
           </div>
           <i data-feather="trash-2" class="remove-item"></i>
         </div>
@@ -66,7 +66,7 @@
           <img src="img/product/seko-bottle.webp" alt="Product 3" />
           <div class="item-detail">
             <h3>Seko Coffee 1L Bottle</h3>
-            <div class="item-price">IDR 30K</div>
+            <div class="item-price">IDR 95K</div>
           </div>
           <i data-feather="trash-2" class="remove-item"></i>
         </div>
@@ -204,7 +204,11 @@
             <i data-feather="phone"></i>
             <input type="text" placeholder="Masukkan Nomor Telepon..." />
           </div>
-          <button type="submit" class="btn">Kirim Pesan</button>
+          <div class="input-group">
+            <i data-feather="message-square"></i>
+            <textarea name="message" id="message" placeholder="Tulis Pesan..."></textarea>
+          </div>
+          <button type="submit" class="btn">Kirim</button>
         </form>
       </div>
     </section>
@@ -247,7 +251,7 @@
               <i data-feather="star" class="star-full"></i>
               <i data-feather="star"></i>
             </div>
-            <div class="product-price">IDR 30K <span>IDR 55K</span></div>
+            <div class="product-price">IDR 95K <span>IDR 120K</span></div>
             <a href="#"><i data-feather="shopping-cart"></i> <span>Add to cart</span></a>
           </div>
         </div>
