--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <!-- Hero Section Start -->
     <section class="hero" id="home">
       <main class="content">
-        <h1>Mari Nikmati Secangkir <span>Kopi</span></h1>
+        <h1>Chill Your Day With <span>SEKO</span></h1>
         <p>Yuk, nikmati aroma dan rasa kopi kami! Kunjungi kami hari ini dan rasakan sendiri kenikmatannya.</p>
         <a href="https://linktr.ee/orderseko" target="_blank" class="cta">Beli Sekarang</a>
       </main>
